--- a/dropdown'.zul
+++ b/dropdown'.zul
@@ -1,8 +1,8 @@
 <zk>
-    <div style=" padding: 5px; width: 200px; min-height: 100%; background-color:#b8b8b8 ; margin-top: 20px; border:2px solid black ; border-radius:4px;">
+    <div style="padding: 10px; width: 200px; min-height: 100%; background-color: #b8b8b8; margin-top: 20px; border: 2px solid black; border-radius: 4px;">
         <vlayout>
-            <label value="Select Bank"/>
-            <combobox >
+            <label value="Select Bank" style="font-weight: bold; font-size: 16px; margin-bottom: 10px;" />
+            <combobox id="bankComboBox" onChange="showLoanInfo(self.getSelectedItem().getLabel())" style="width: 100%;">
                 <comboitem label="Axis Bank" />
                 <comboitem label="Bank of India" />
                 <comboitem label="Canara Bank" />
@@ -11,6 +11,6 @@
                 <comboitem label="SBI Bank" />
                 <comboitem label="Union Bank" />
             </combobox>
-        </vlayout>   
+        </vlayout>
     </div>
 </zk>
