--- a/dropdown'.zul
+++ b/dropdown'.zul
@@ -1,6 +1,6 @@
-<?page title="new page title" contentType="text/html;charset=UTF-8"?>
+<!-- dropdown'.zul -->
 <zk>
-	<menubar hflex="min" style=" border: 4px solid black; border-radius:3px;">
+	<menubar hflex="min" style=" border: 4px solid black; border-radius:3px;" autodrop="true">
 		<menu label="TYPES OF BANKS">
 			<menupopup>
 				<menuitem label="Axis Bank" onClick='display("axis")' />
@@ -14,5 +14,4 @@
 			</menupopup>
 		</menu>
 	</menubar>
-
 </zk>
