--- a/HDFC_Bank.zul
+++ b/HDFC_Bank.zul
@@ -1,37 +1,113 @@
-<!--HDFC_Bank.zul-->
 <zk>
-    <window title="Loan Information" border="normal" width="300px" height="310px" style=" position: absolute; top: 50%; left: 50%; border-radius:5px; transform: translate(-50%, -50%);">
-        <label value="HDFC" style="font-weight:bold;text-align:center; display:block"/>
-        <separator/>
-        <grid>
-            <columns>
-                <column label="Loan Type"/>
-                <column label="Interest Rate"/>
-            </columns>
-            <rows>
-                <row>
-                    <label value="Cash Advance"/>
-                    <label value="12%"/>
-                </row>
-                <row>
-                    <label value="Home Loan"/>
-                    <label value="10%"/>
-                </row>
-                <row>
-                    <label value="Credit Card Loan"/>
-                    <label value="11%"/>
-                </row>
-                <row>
-                    <label value="Overdraft Loan"/>
-                    <label value="7%"/>
-                </row>
-                <row>
-                    <label value="Medical Loan"/>
-                    <label value="4%"/>
-                </row>
-            </rows>
-        </grid>
-        <separator/>
-        <label value="Best Loan of HDFC Bank is 'Medical Loan'" style="color:blue;"/>
-    </window>
+<style>
+        .loan-groupbox {
+            margin-left: 75px;
+        }
+    </style>
+    <vbox>
+            <label value="HDFC Bank" style="font-weight:bold; font-size:20px; text-align:center; display:block;"/>
+            <separator height="30px"/>
+            <hbox>
+            <groupbox title="Gold Loan" mold="3d"  class="loan-groupbox">
+            <image src="https://www.wionews.com/iifl/wp-content/uploads/2022/12/gold-loan.jpg" style="width:120px; height:100px;"/> 
+                <vbox>
+                    <label value="Rate of Interest: 14%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+            <separator width="30px"/>
+            <groupbox title="House Loan" mold="3d" >
+            <image src="https://5.imimg.com/data5/SELLER/Default/2023/5/308897486/MA/RK/CT/189897864/home-loan-png.png" style="width:120px;height:100px;"/>
+                <vbox>
+                    <label value="Rate of Interest: 13%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+            <separator width="30px"/>
+            <groupbox title="Vehicle Loan" mold="3d">
+            <image src="https://www.bankofbaroda.in/-/media/project/bob/countrywebsites/india/blogs/images/what-is-vehicle-loan-and-its-different-types.jpg" style="width:120px;height:100px;"/>
+                <vbox>
+                    <label value="Rate of Interest: 9%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+            <separator width="30px"/>
+            <groupbox title="Debt Loan" mold="3d" >
+            <image src="https://outlookmoney.com/public/uploads/story/1ba5b227c5bbcc63f6de20793d7eb42d.jpg" style="width:120px;height:100px;"/>
+                <vbox>
+                    <label value="Rate of Interest: 5%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+            <separator width="30px"/>
+            <groupbox title="Personal Loan" mold="3d" >
+            <image src="https://img1.exportersindia.com/product_images/bc-full/2019/12/6871181/personal-loan-1577186161-5220681.jpeg" style="width:120px;height:100px;"/>
+                <vbox>
+                    <label value="Rate of Interest: 4%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+            <separator width="30px"/>
+            <groupbox title="Business Loan" mold="3d" >
+            <image src="https://www.wionews.com/iifl/wp-content/uploads/2022/12/Business-Loan.jpg" style="width:120px;height:100px;"/>
+                <vbox>
+                    <label value="Rate of Interest: 15%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+		</hbox>
+		</vbox>
+		<separator height="50px"/>
+		<vbox>
+            <hbox>
+            <groupbox title="Education Loan" mold="3d"  class="loan-groupbox" >
+            <image src="https://buddy4study.s3.ap-southeast-1.amazonaws.com/blog/uploads/2018/06/17062849/747_edu_loan_2jpg_130756.jpg" style="width:120px; height:100px;"/> 
+                <vbox>
+                    <label value="Rate of Interest: 14%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+            <separator width="30px"/>
+            <groupbox title="Credit Card Loan" mold="3d" >
+            <image src="https://www.getonecard.app/images/blog/Loan_on_credit_card.png" style="width:120px;height:100px;"/>
+                <vbox>
+                    <label value="Rate of Interest: 10%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+            <separator width="30px"/>
+            <groupbox title="Agriculture Loan" mold="3d">
+            <image src="https://d28wu8o6itv89t.cloudfront.net/images/AgriculturalLoancompressedjpg-1591696527432.jpeg" style="width:120px;height:100px;"/>
+                <vbox>
+                    <label value="Rate of Interest: 3%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+            <separator width="30px"/>
+            <groupbox title="Secured Loan" mold="3d" >
+            <image src="https://cdnlearnblog.etmoney.com/wp-content/uploads/2023/12/Twitter-Secured-loan-02.jpg" style="width:120px;height:100px;"/>
+                <vbox>
+                    <label value="Rate of Interest: 12%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+            <separator width="30px"/>
+            <groupbox title="Plot Loan" mold="3d" >
+            <image src="https://www.hdfcsales.com/blog/wp-content/uploads/2019/10/hdfc-plot-land-loan.jpg" style="width:120px;height:100px;"/>
+                <vbox>
+                    <label value="Rate of Interest: 8%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+            <separator width="30px"/>
+            <groupbox title="Overdraft Loan" mold="3d" >
+            <image src="https://media.lendingkart.com/wp-content/uploads/2022/03/Overdraft-Loan.jpg" style="width:120px;height:100px;"/>
+                <vbox>
+                    <label value="Rate of Interest: 6%" />
+                    <button label="APPLY NOW" onClick="loan.doHighlighted()" style="margin-left:13px;"/>
+                </vbox>
+            </groupbox>
+		</hbox>
+		</vbox>
+		
 </zk>
